Use pretty-printed decls in cycle diagnostics

This commit makes the pretty-printing behavior of `DiagnosticEngine` easily accessible via a new `Decl::getLocByPrintingIfNeeded()` call and uses that call in various places related to `extractNearestSourceLoc()`, ultimately improving diagnostics for cycles involving serialized declarations.

Note that the test case added here should probably not cause a circularity error; SR-14324 tracks this bug.