lib/AST/Decl.cpp
@@ -630,6 +630,10 @@ Result->X = SM.getLocFromExternalSource(Locs->SourceFilePath, Locs->X.Line,   \
   return Result;
 }
 
+SourceLoc Decl::getLocByPrintingIfNeeded() const {
+  return getASTContext().Diags.getDiagnosticLocForDecl(this);
+}
+
 StringRef Decl::getAlternateModuleName() const {
   for (auto *Att: Attrs) {
     if (auto *OD = dyn_cast<OriginallyDefinedInAttr>(Att)) {
@@ -8185,7 +8189,7 @@ void swift::simple_display(llvm::raw_ostream &out, AccessorKind kind) {
 }
 
 SourceLoc swift::extractNearestSourceLoc(const Decl *decl) {
-  auto loc = decl->getLoc();
+  auto loc = decl->getLocByPrintingIfNeeded();
   if (loc.isValid())
     return loc;
 
